feat: UI for Create Account activity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="70dp"
-    android:paddingTop="50dp"
-    android:paddingRight="70dp"
-    android:paddingBottom="50dp"
+    android:padding="40dp"
     tools:context=".ui.login.LoginActivity">
 
 
@@ -16,28 +13,28 @@
         android:id="@+id/imageView"
         android:layout_width="176dp"
         android:layout_height="67dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="64dp"
         android:src="@drawable/clarity_logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.621"
+        app:layout_constraintHorizontal_bias="0.574"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/username"
         style="@style/LogInFields"
-        android:layout_width="260dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="164dp"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="172dp"
         android:elevation="5dp"
-        android:hint="@string/prompt_email"
+        android:hint="  Username"
         android:inputType="textEmailAddress"
-        android:padding="8dp"
+        android:padding="10dp"
         android:selectAllOnFocus="true"
         android:textAlignment="textStart"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
@@ -45,40 +42,41 @@
     <EditText
         android:id="@+id/password"
         style="@style/LogInFields"
-        android:layout_width="260dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:elevation="5dp"
-        android:hint="@string/prompt_password"
+        android:hint="  Password"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
-        android:padding="8dp"
+        android:padding="10dp"
         android:selectAllOnFocus="true"
         android:textAlignment="textStart"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
         tools:ignore="TouchTargetSizeCheck" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
-        style="@style/LogInSubmit"
-        android:layout_width="0dp"
+        style="@style/Submit"
+        android:layout_width="280dp"
         android:layout_height="40dp"
         android:layout_gravity="start"
         android:elevation="5dp"
         android:enabled="true"
+        android:textSize="16sp"
+        android:textAllCaps="false"
         android:text="Sign In"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/new_account"
         app:layout_constraintEnd_toEndOf="@+id/password"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/new_account"
