--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,9 +26,12 @@
     <style name="Subtitle"><item name="android:textColor">@color/wolf_grey</item></style>
     <style name="Typography"><item name="android:textColor">@color/grey</item></style>
 
-    <!-- Styles for Log In Fragment -->
+    <!-- Styles for Login/Create account -->
     <style name="LogInFields"><item name="android:background">@drawable/grey_rectangle</item> </style>
-    <style name="LogInSubmit"><item name="android:background">@drawable/purple_rectangle</item></style>
+    <style name="Submit"><item name="android:background">@drawable/purple_rectangle</item></style>
+    <style name="CreateAccountHeading"><item name="android:textColor">@color/dark_purple</item></style>
+    <style name="CreateAccountFields"><item name="android:background">@drawable/field_light</item></style>
+    <style name="ProfileBg"><item name="android:backgroundTint">#E4E5E8</item></style>
 
     <!-- Styles for Event Fragment -->
     <style name="EventTitle"><item name="android:textColor">@color/black</item></style>
