--- a/app/src/main/res/layout/create_new.xml
+++ b/app/src/main/res/layout/create_new.xml
@@ -38,30 +38,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <ImageView
-            style="@style/ProfileBg"
-            android:id="@+id/profileBg"
-            android:layout_width="108dp"
-            android:layout_height="109dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/profile_circle_base"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/add_image"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:shapeAppearanceOverlay="@style/RoundedShapeAppearance" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/add_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/baseline_image_24"
-            app:tint="@color/grey"
             app:shapeAppearanceOverlay="@style/RoundedShapeAppearance"
-            app:layout_constraintBottom_toBottomOf="@+id/profileBg"
-            app:layout_constraintEnd_toEndOf="@+id/profileBg"
-            app:layout_constraintStart_toStartOf="@+id/profileBg"
-            app:layout_constraintTop_toTopOf="@+id/profileBg" />
+            app:srcCompat="@drawable/baseline_account_circle_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -181,7 +168,7 @@
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/purple_rectangle"
             android:enabled="true"
             android:text="Sign Up"
