--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".NavBarFragments.CalendarFragment">
+    tools:context=".NavBarFragments.Calendar.CalendarFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/agendaRecycler"
