--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,28 +99,27 @@
 
     <RelativeLayout
         android:id="@+id/progress_layout"
-        android:layout_width="84dp"
-        android:layout_height="96dp"
-        android:layout_margin="100dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password">
+        app:layout_constraintTop_toBottomOf="@+id/new_account">
 
         <!--progress bar implementation-->
         <ProgressBar
             android:id="@+id/progress_bar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginStart="130dp"
+            android:layout_marginEnd="130dp"
+            android:layout_marginBottom="22dp"
             android:background="@drawable/background_transparent"
             android:indeterminate="false"
-            android:progressDrawable="@drawable/circular_progress_bar"
-            android:textAlignment="center" />
+            android:progressDrawable="@drawable/circular_progress_bar" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
