--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,21 +102,20 @@
         android:layout_width="84dp"
         android:layout_height="96dp"
         android:layout_margin="100dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="112dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password">
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.257">
 
         <!--progress bar implementation-->
         <ProgressBar
             android:id="@+id/progress_bar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="0dp"
+            android:layout_width="132dp"
+            android:layout_height="113dp"
             android:background="@drawable/background_transparent"
             android:indeterminate="false"
             android:progressDrawable="@drawable/circular_progress_bar"
