--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -250,15 +250,16 @@
     <EditText
         android:id="@+id/description_text"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="30dp"
         android:background="@drawable/text_box"
-        android:paddingStart="10dp"
-        android:textSize="15sp"
         android:hint=""
-        app:layout_constraintStart_toStartOf="@+id/purple_line"
-        app:layout_constraintTop_toBottomOf="@+id/description_info"
         android:inputType="textMultiLine"
-        android:textColor="#000000"/>
+        android:paddingStart="10dp"
+        android:textColor="#000000"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/description_info" />
+
     <TextView
         android:id="@+id/contact"
         android:layout_width="wrap_content"
@@ -284,25 +285,24 @@
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/contact" />
-    <TextView
+
+    <Button
+        android:id="@+id/postButton"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/purple_button_rect"
+        android:gravity="center"
+        android:padding="8dp"
         android:text="Post"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:background="@drawable/purple_button_rect"
-        android:padding="8dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="@+id/purple_line"
-        app:layout_constraintTop_toBottomOf="@+id/contact_text"
         app:layout_constraintEnd_toEndOf="@+id/purple_line"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
 
-        />
-
-
-
+        app:layout_constraintTop_toBottomOf="@+id/contact_text" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
