--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -150,7 +150,7 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start date"
+            android:text="Start Date"
             android:textColor="#6338CD"
             android:textSize="10sp"
             android:paddingTop="10dp"
@@ -160,127 +160,99 @@
             app:layout_constraintStart_toStartOf="@+id/purple_line"
             app:layout_constraintTop_toBottomOf="@+id/tag_choose" />
 
-        <TextView
-            android:id="@+id/date2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="168dp"
-            android:layout_marginTop="52dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="5dp"
-            android:text="End date"
-            android:textColor="#6338CD"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
-            app:layout_constraintStart_toStartOf="@+id/purple_line"
-            app:layout_constraintTop_toBottomOf="@+id/tag_choose"
-            app:layout_constraintVertical_bias="1.0" />
-
         <EditText
             android:id="@+id/editTextDate"
-            android:layout_width="70dp"
+            android:layout_width="130dp"
             android:layout_height="30dp"
             android:background="@drawable/text_box"
             android:focusable="false"
             android:hint="Select Date"
             android:paddingStart="10dp"
-            android:textColor="#000000"
             android:textSize="15sp"
+            android:textColor="#000000"
             app:layout_constraintStart_toStartOf="@+id/purple_line"
             app:layout_constraintTop_toBottomOf="@+id/date" /> <!-- Disable direct editing -->
-
-
-        <EditText
-            android:id="@+id/editTextDate2"
-            android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="160dp"
-            android:layout_marginBottom="29dp"
-            android:background="@drawable/text_box"
-            android:focusable="false"
-            android:hint="Select Date"
-            android:paddingStart="10dp"
-            android:textColor="#000000"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/location_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.064"
-            app:layout_constraintStart_toStartOf="@+id/purple_line"
-            app:layout_constraintTop_toBottomOf="@+id/date"
-            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="336dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="5dp"
-            android:text="Start time"
+            android:text="Start Time"
             android:textColor="#6338CD"
             android:textSize="10sp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTime"
+            android:layout_marginTop="60dp"
+            android:layout_marginStart="115dp"
             app:layout_constraintStart_toEndOf="@+id/date"
-            app:layout_constraintStart_toStartOf="@+id/tag_choose"
-            app:layout_constraintTop_toTopOf="@+id/purple_line"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/tag_choose" />
+        <EditText
+            android:id="@+id/editTextTime"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
+            android:background="@drawable/text_box"
+            android:focusable="false"
+            android:hint="Select Time"
+            android:paddingStart="10dp"
+            android:textSize="15sp"
+            android:textColor="#000000"
+            app:layout_constraintEnd_toEndOf="@+id/editTextValue"
+            app:layout_constraintStart_toEndOf="@+id/editTextDate"
+            app:layout_constraintTop_toBottomOf="@+id/time" />
+        <TextView
+            android:id="@+id/date2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="End Date"
+            android:textColor="#6338CD"
+            android:textSize="10sp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:textStyle="bold"
+
+            app:layout_constraintStart_toStartOf="@+id/purple_line"
+            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+
+        <EditText
+            android:id="@+id/editTextDate2"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
+            android:background="@drawable/text_box"
+            android:focusable="false"
+            android:hint="Select Date"
+            android:paddingStart="10dp"
+            android:textSize="15sp"
+            android:textColor="#000000"
+            app:layout_constraintStart_toStartOf="@+id/purple_line"
+            app:layout_constraintTop_toBottomOf="@+id/date2" /> <!-- Disable direct editing -->
 
         <TextView
             android:id="@+id/time2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="240dp"
-            android:layout_marginTop="328dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="5dp"
-            android:text="End time"
+            android:text="End Time"
             android:textColor="#6338CD"
             android:textSize="10sp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTime2"
-            app:layout_constraintStart_toEndOf="@+id/date"
-            app:layout_constraintStart_toStartOf="@+id/tag_choose"
-            app:layout_constraintTop_toTopOf="@+id/purple_line"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <EditText
-            android:id="@+id/editTextTime"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="28dp"
-            android:background="@drawable/text_box"
-            android:focusable="false"
-            android:hint="Select Time"
-            android:paddingStart="10dp"
-            android:textColor="#000000"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/location_text"
-            app:layout_constraintEnd_toEndOf="@+id/editTextValue"
-            app:layout_constraintHorizontal_bias="0.011"
-            app:layout_constraintStart_toEndOf="@+id/editTextDate"
-            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
-            app:layout_constraintVertical_bias="0.0" />
-
+            android:layout_marginStart="115dp"
+            app:layout_constraintStart_toEndOf="@+id/date2"
+            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
         <EditText
             android:id="@+id/editTextTime2"
-            android:layout_width="60dp"
+            android:layout_width="130dp"
             android:layout_height="30dp"
-            android:layout_marginTop="28dp"
             android:background="@drawable/text_box"
             android:focusable="false"
             android:hint="Select Time"
             android:paddingStart="10dp"
-            android:textColor="#000000"
             android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/location_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.035"
+            android:textColor="#000000"
+            app:layout_constraintEnd_toEndOf="@+id/editTextValue"
             app:layout_constraintStart_toEndOf="@+id/editTextDate2"
-            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/time2" />
 
         <TextView
             android:id="@+id/location"
@@ -293,7 +265,7 @@
             android:paddingBottom="5dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/purple_line"
-            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />
 
         <EditText
             android:id="@+id/location_text"
